fix(discovery): harden final validation safeguards